--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,6 @@
 <h1>Welcome to the Home Page!</h1>
+
+<p>
+  <%= link_to 'Articles listing', articles_path %> |
+  <%= link_to 'About page', about_path %>
+</p>
